--- a/Fase 3/public/css/main-layout.css
+++ b/Fase 3/public/css/main-layout.css
@@ -4,7 +4,7 @@ body {
     /* background-color: var(--bs-body-color); */
 }
 
-.card-plano {
+.card-projeto {
     background-color: var(--bs-gray-900)
 }
 
