--- a/Fase 3/public/css/main-layout.css
+++ b/Fase 3/public/css/main-layout.css
@@ -8,7 +8,7 @@ body {
     background-color: var(--bs-gray-900)
 }
 
-.card-material {
+.card-chapa {
     background-color: var(--bs-gray-800)
 }
 
